# CUDA-PINN

./: .gitignore  CMakeLists.txt  README.md  test
include/: device_math.h  init_tensor.h  kernel.cuh  tensor.cuh  utils.cuh
include/device/: constants.h  interface.cuh  kernel.cuh  runtime.cuh  variables.cuh
include/host/: init_tensor.h  runtime.h
other/: legacy_tensor.cuh
src/: main.cu  runtime.cu  utils.cu
